Drools: Removed java.util.Base64 import